fix: bugs + add tests
too lazy to make description